// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BookmarkButton component snapshot Should correctly render BookmarkButton component (active) 1`] = `
<button
  className="place-card__bookmark-button button place-card__bookmark-button--active"
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={19}
    width={18}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`BookmarkButton component snapshot Should correctly render BookmarkButton component (default) 1`] = `
<button
  className="place-card__bookmark-button button place-card__bookmark-button--active"
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={19}
    width={18}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`BookmarkButton component snapshot Should correctly render BookmarkButton component (not active) 1`] = `
<button
  className="place-card__bookmark-button button "
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={19}
    width={18}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`BookmarkButton component snapshot Should correctly render BookmarkButton component (with prefix CARD) 1`] = `
<button
  className="place-card__bookmark-button button place-card__bookmark-button--active"
  type="button"
>
  <svg
    className="place-card__bookmark-icon"
    height={19}
    width={18}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;

exports[`BookmarkButton component snapshot Should correctly render BookmarkButton component (with prefix DETAILS) 1`] = `
<button
  className="property__bookmark-button button property__bookmark-button--active"
  type="button"
>
  <svg
    className="property__bookmark-icon"
    height={33}
    width={31}
  >
    <use
      xlinkHref="#icon-bookmark"
    />
  </svg>
  <span
    className="visually-hidden"
  >
    To bookmarks
  </span>
</button>
`;
